@@ -9,7 +9,6 @@ for 0.7
   * JSP
   * (Q)BASIC
   * Lisp
-  * Python TBs
   * IPython sessions
   * HTML with special formatting?
   * LaTeX special formatting?
