@@ -91,6 +91,15 @@ Agile languages
     :Mimetypes: None
 
 
+`PythonTracebackLexer`
+
+    For Python tracebacks.
+
+    :Aliases: ``pytb``
+    :Filename patterns: ``*.pytb``
+    :Mimetypes: ``application/x-python-traceback``
+
+
 `RubyLexer`
 
     For `Ruby <http://www.ruby-lang.org>`_ source code.
