@@ -5,11 +5,13 @@ Version 0.7
 -----------
 (codename to be selected, released Feb XX, 2007)
 
+- Added Python traceback lexer, thanks to Tim Hatch.
+
 - Added "fruity" style, another dark background originally vim-based theme.
 
 - Fixed tickets #167, #178, #179, #180.
 
-- Added filters.
+- Added token stream filters.
 
 - Changed behavior of `in` Operator for tokens.
 
